--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a class="botao1" >ABOUT</a>
 <a class="botao1" >PRODUCT</a>
 <a class="botao1" >SERVICE</a>
-<a class="botao1" >CONTACT</a>
+<a class="botao1" >CONTAT</a>
 <a class="botao1" >LOG IN</a>
 
 </header>
